# gitlab-matrix-merge-request-notifier

./: .gitignore  README.md  gitlab-matrix-notifier.py  pyproject.toml
